# brainf-ck

./: .gitignore  CHANGELOG.md  README.md  brainf-ck.cabal
app/: Main.hs
notes/: Optimisations.md  Optimizations.md
src/: BrainFuck.hs  BrainFuckBash.hs
src/BrainFuck/: Bash.hs  C.hs  Haskell.hs  Interpret.hs  LLVM.hs  Optimise.hs  Optimize.hs  Parse.hs  Pascal.hs  Whitespace.hs  X86_64Assembly.hs  X86_64MachineCode.hs
test/: Main.hs  TestOptimise.hs  TestParse.hs
