cabal-version:      3.0
name:               brainf-ck
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             Billy Moore
maintainer:         billyedmoore@yahoo.com
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  BrainFuck.Bash
                      BrainFuck.Parse
                      BrainFuck.Interpret
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.21.0.0,
                      containers >= 0.7,
    hs-source-dirs:   src
    default-language: GHC2024

executable brainf-ck
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
                     base ^>=4.21.0.0,
                     optparse-applicative,
                     brainf-ck

    hs-source-dirs:   app
    default-language: GHC2024

test-suite brainf-ck-test
    import:           warnings
    default-language: GHC2024
    -- other-modules:
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base ^>=4.21.0.0,
        tasty ^>= 1.5,
        tasty-hunit ^>= 0.10,
        brainf-ck
